Retrieve values from search input and assign to a constant

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,7 @@
-background-image: var(--bs-gradient);.
+.custom-gradient {
+  background-image: linear-gradient(to right, #465ab8, #261360);
+}
+
+btn-dark {
+  background-color: #261360;
+}
